objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Tax__c</fullName>
        <label>IT_Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume_Day__c</fullName>
        <label>Volume/Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Day_percentile__c</fullName>
        <label>Volume Day percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>cost__c</fullName>
        <label>cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KIND OF FUEL</fullName>
                </value>
                <value>
                    <fullName>FEE</fullName>
                </value>
                <value>
                    <fullName>KIND OF FUEL &amp; FEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fee__c</fullName>
        <label>fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Phone__c</columns>
        <columns>Volume_Day__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>